--- a/views/app.html
+++ b/views/app.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<a href="/">Home</a> |
-	<a href="/about">About</a>
-	<a href="/calculator">calculator</a>
+	<a href="/about">About</a> |
+	<a href="/calculator">Calculator</a>
 	<h1>Welcome to my web app!</h1>
 	<img src="img/winteriscoming.jpg" />
 
